--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/splitListView"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="20dp"
+        android:stackFromBottom="true"
+        android:transcriptMode="alwaysScroll" />
 
 </LinearLayout>
